# idash

./: .dockerignore  .gitignore  CLAUDE.md  CONTEXT.md  PROJECT_PLAN.md  README.md  Taskfile.yml  biome.json  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
.devcontainer/: devcontainer.json  setup.sh
.github/: dependabot.yml
.github/actions/setup/: action.yml
.github/workflows/: cicd.yml
apps/batch/: Dockerfile  pyproject.toml
apps/batch/src/batch/: handler_collect.py  handler_notify.py
apps/batch/tests/: conftest.py  test_handler_collect.py  test_handler_notify.py
apps/bff/: Dockerfile  pyproject.toml
apps/bff/src/bff/: export_openapi.py  main.py
apps/bff/tests/: test_main.py
apps/frontend/: index.html  package.json  vite.config.ts
apps/frontend/src/: App.tsx  index.css  main.tsx
apps/frontend/src/api/: client.ts  types.ts
apps/frontend/src/components/: AssetsTable.tsx  EmptyState.tsx  Hero.tsx  MetricToggle.tsx  PeriodSelector.tsx  PortfolioChart.tsx  ProductsChart.tsx  SegmentedControl.tsx
apps/frontend/src/lib/: chart.ts  colors.ts  format.test.ts  format.ts  metrics.ts  series.test.ts  series.ts
docs/adr/: 0001-cicd-github-oidc.md  0002-scraper-context-manager-port.md  0003-selenium-pinned-chrome-on-lambda.md  0004-batch-failure-alert.md  0005-datastore-duckdb-s3-parquet.md  0006-dashboard-access-control.md
docs/progress/: issue-1.md  issue-16-concrete.md  issue-16-domain.md  issue-2.md  issue-20.md  issue-23.md  issue-27.md  issue-3.md  issue-8-concrete.md  issue-8-container.md  issue-8.md  remove-sheets-datastore.md  visualization-spec.md
infra/: package.json  tsconfig.json
infra/lib/: batch-stack.ts  bff-stack.ts  frontend-stack.ts
infra/lib/functions/: basic-auth.js
infra/scripts/: typecheck.mjs
infra/test/: batch-stack.test.ts  bff-stack.test.ts  frontend-stack.test.ts
infra/test/__snapshots__/: batch-stack.test.ts.snap  bff-stack.test.ts.snap  frontend-stack.test.ts.snap
scripts/: csv_to_parquet.py  pytest.sh  run_collect_local.py  run_notify_local.py
