[project]
name = "idash-workspace"
version = "0.0.0"
description = "idash monorepo virtual root (uv workspace)"
requires-python = ">=3.13"
dependencies = []

# このルートは仮想ルート（virtual root）。配布物ではないため [build-system] は定義しない。
# 実体パッケージは packages/* および apps/{batch,bff} に置き、uv ワークスペースで束ねる。

[tool.uv.workspace]
members = ["packages/*", "apps/batch", "apps/bff"]

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "pytest",
    "pytest-cov",
]

# ----------------------------------------------------------------------------
# ツール設定はルートに集約する（各メンバーパッケージは設定を持たない）。
# ----------------------------------------------------------------------------

[tool.ruff]
target-version = "py313"
line-length = 100
src = [
    "packages/domain/src",
    "packages/application/src",
    "packages/schemas/src",
    "packages/infrastructure/src",
    "packages/common/src",
    "apps/batch/src",
    "apps/bff/src",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ty.environment]
python-version = "3.13"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["packages", "apps"]
# Phase 0 では実テストを書かない。テスト 0 件時の exit code 5 は Taskfile 側で吸収する。
# カバレッジ（pytest-cov）は実コードが入る Phase 1 以降で addopts に --cov を足す。
