[project]
name = "idash-workspace"
version = "0.0.0"
description = "idash monorepo virtual root (uv workspace)"
requires-python = ">=3.13"
dependencies = []

# このルートは仮想ルート（virtual root）。配布物ではないため [build-system] は定義しない。
# 実体パッケージは packages/* および apps/{batch,bff} に置き、uv ワークスペースで束ねる。

[tool.uv.workspace]
members = ["packages/*", "apps/batch", "apps/bff"]

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "pytest",
    "pytest-cov",
    # ワークスペース全メンバーを dev に editable 投入する。これにより `uv sync` 後の
    # `uv run`（pytest / ty / ruff）が src レイアウトの各パッケージを import 解決できる。
    # プレーンな `uv sync` は依存されていないメンバーを prune するため、テスト・型チェックを
    # 成立させるにはここで dev 依存として配線する必要がある。
    "idash-domain",
    "idash-application",
    "idash-schemas",
    "idash-infrastructure",
    "idash-common",
    "idash-batch",
    "idash-bff",
]

[tool.uv.sources]
idash-domain = { workspace = true }
idash-application = { workspace = true }
idash-schemas = { workspace = true }
idash-infrastructure = { workspace = true }
idash-common = { workspace = true }
idash-batch = { workspace = true }
idash-bff = { workspace = true }

# ----------------------------------------------------------------------------
# ツール設定はルートに集約する（各メンバーパッケージは設定を持たない）。
# ----------------------------------------------------------------------------

[tool.ruff]
target-version = "py313"
line-length = 100
src = [
    "packages/domain/src",
    "packages/application/src",
    "packages/schemas/src",
    "packages/infrastructure/src",
    "packages/common/src",
    "apps/batch/src",
    "apps/bff/src",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ty.environment]
python-version = "3.13"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --cov=domain --cov=application --cov-report=term-missing"
testpaths = ["packages", "apps"]
# テスト 0 件時の exit code 5 は Taskfile 側（scripts/pytest.sh）で吸収する。
# カバレッジ（pytest-cov）はレポートのみ。閾値（--cov-fail-under）は設けない。
