[project]
name = "idash-bff"
version = "0.0.0"
description = "idash BFF app (FastAPI + Mangum on Lambda)."
requires-python = ">=3.13"
dependencies = [
    "idash-application",
    "idash-infrastructure",
    "idash-schemas",
    "idash-common",
    "fastapi",
    "mangum",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "bff"
module-root = "src"

[tool.uv.sources]
idash-application = { workspace = true }
idash-infrastructure = { workspace = true }
idash-schemas = { workspace = true }
idash-common = { workspace = true }
